--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
 </head>
 <body>
   <main>
-    <div class="container">
+    <div class="container-global">
         <nav class="navigation"></nav>
-        <div class="row">
-            <div class="main__text">
-                <h2>Hi! I am Nora.<br>A Frontend Developer</h2>
-                <p>... with a love for blending <strong>creativity</strong> and code to build sleek, 
-                    user-friendly websites. Outside of development, I’m all about soaking in the magic 
-                    of sunrises, exploring <strong>city streets</strong>, hitting the <strong>gym</strong>, 
-                    daydreaming about <strong>airplanes</strong>, and indulging in my favorite comfort food — pasta. 🍝 </p>
-            </div>
-            <div class="image__me">
-                <img src="images/" alt="illustrated nora keil">
-            </div>
-        </div>
+    
 
     </div>
   </main>
