--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Nora Keil: Frontend Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main>
+  <main class="main">
     <div class="container-global">
-        <nav class="navigation"></nav>
-    
-
+        <a href=""><p>nora keil</p></a>
     </div>
+    <div class="container-global main__me">
+        <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaborations</span></h1>
+    </div>
+  
   </main>
 
 
