--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
 </head>
 <body>
   <main class="main">
-    <div class="container-global">
-        <a href=""><p>nora keil</p></a>
+    <div class="container-global flex">
+        <div class="main__logo">
+            <a href="#main"><p>nora<span class="light">keil</span></p></a>
+        </div>
+        <div class="main__nav flex poppins-light">
+            <ul class="main__nav-list flex">
+                <li class="list-items"><a class="list-items-a" href="">BASE</a></li>
+                <li class="list-items"><a class="list-items-a" href="">WORK</a></li>
+                <li class="list-items"><a class="list-items-a" href="">JOURNEY</a></li>
+                <li class="list-items"><a class="list-items-a" href="">codinglab</a></li>
+                <li class="list-items"><a class="list-items-a" href="">CONNECT</a></li>
+            </ul>
+        </div>
     </div>
     <div class="container-global main__me">
-        <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaborations</span></h1>
+        <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaborations.</span></h1>
     </div>
   
   </main>
