added section for journey

--- a/index.html
+++ b/index.html
@@ -30,27 +30,36 @@
         </div>
     </div>
     <div class="container-global main__me">
-        <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaborations.</span></h1>
+        <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaboration.</span></h1>
     </div>
-  
   </main>
 
+  <section class="journey poppins-light">
+    <div class="container-global flex">
+        <div class="con__journey-p">
+            <p>My coding journey began during my Bachelor's when I first encountered Python—and I was hooked. 
+                Since then, I've been focused on creating digital experiences that are both functional 
+                and visually engaging.</p>
+            <p>Architecture, film, and photography influence how I approach both coding and design. 
+                When I’m not coding or learning something new, you’ll find me at the gym or taking 
+                city walks to recharge.</p>
+            <p>I’m always excited to collaborate on new projects and create something amazing together.</p> 
+            <p>I also love connecting with other women in tech to empower and support each other along the way!</p>
+            <a href="#connect"><p>Connect with me</p></a>
+        </div>
+        <div class="con__journey-img">
+            <img src="images/sophie-illustration.png" alt="">
+        </div>
+
+    </div>
+  </section>
 
 
 
 
 
-
-
-
-
-
-
-
-
-  <section class="facts"></section>
-  <section class="projects"></section>
-  <section class="contact"></section>
+  <section class="work"></section>
+  <section class="connect"></section>
   <footer></footer>
 
 
