--- a/index.html
+++ b/index.html
@@ -33,7 +33,39 @@
         <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaboration.</span></h1>
     </div>
   </main>
+<!--------------------------------WORK-------------------------------------------------------------->
+<section class="work grid-parent">
+    <div class="work grid_one">
+        <img src="images/portfolio4.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    <div class="work grid_two">
+        <img src="images/portfolio2.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    <div class="work grid_three">
+        <img src="images/portfolio6.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    <div class="work grid_four">
+        <img src="images/portfolio3.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    <div class="work grid_five">
+        <img src="images/portfolio5.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    <div class="work grid_six">
+        <img src="images/portfolio1.png" alt="" class="work__img">
+        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    </div>
+    
 
+</section>
+
+
+
+<!--------------------------------JOURNEY-------------------------------------------------------------->
   <section class="journey poppins-light">
     <div class="container-global flex">
         <div class="con__journey-p">
@@ -50,16 +82,15 @@
         <div class="con__journey-img">
             <img src="images/sophie-illustration.png" alt="">
         </div>
-
     </div>
   </section>
 
 
-
-
-
-  <section class="work"></section>
+<!--------------------------------WORK-------------------------------------------------------------->
   <section class="connect"></section>
+
+
+<!--------------------------------FOOTER-------------------------------------------------------------->
   <footer></footer>
 
 
