added divs around grid items

--- a/index.html
+++ b/index.html
@@ -35,32 +35,54 @@
   </main>
 <!--------------------------------WORK-------------------------------------------------------------->
 <section class="work grid-parent">
-    <div class="work grid_one">
-        <img src="images/portfolio4.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_one">
+        <div class="grid__text-item">
+            <img src="images/portfolio4.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>
     </div>
-    <div class="work grid_two">
-        <img src="images/portfolio2.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_two">
+        <div class="grid__text-item">
+            <img src="images/portfolio2.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>
     </div>
-    <div class="work grid_three">
-        <img src="images/portfolio6.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_three">
+        <div class="grid__text-item">
+            <img src="images/portfolio6.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>
     </div>
-    <div class="work grid_four">
-        <img src="images/portfolio3.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_four">
+        <div class="grid__text-item">
+            <img src="images/portfolio3.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>
     </div>
-    <div class="work grid_five">
-        <img src="images/portfolio5.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_five">
+        <div class="grid__text-item">
+            <img src="images/portfolio5.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>
     </div>
-    <div class="work grid_six">
-        <img src="images/portfolio1.png" alt="" class="work__img">
-        <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+    <div class="work grid-item grid_six">
+        <div class="grid__text-item">
+            <img src="images/portfolio1.png" alt="" class="work__img">
+        </div>
+        <div class="grid__text-item">
+            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+        </div>      
     </div>
-    
-
 </section>
 
 
