--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio4.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>
     </div>
@@ -47,7 +47,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio2.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>
     </div>
@@ -55,7 +55,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio6.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>
     </div>
@@ -63,7 +63,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio3.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio5.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>
     </div>
@@ -79,7 +79,7 @@
         <div class="grid__text-item">
             <img src="images/portfolio1.png" alt="" class="work__img">
         </div>
-        <div class="grid__text-item">
+        <div class="grid__text-item grey">
             <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
         </div>      
     </div>
