added fact generator in html

--- a/index.html
+++ b/index.html
@@ -101,8 +101,21 @@
             <p>I also love connecting with other women in tech to empower and support each other along the way!</p>
             <a href="#connect"><p>Connect with me</p></a>
         </div>
-        <div class="con__journey-img">
-            <img src="images/sophie-illustration.png" alt="">
+        <div class="con__journey-img flex">
+            <div class="journey__div-img">
+                <img src="images/sophie-illustration.png" alt="">
+            </div>
+            <div class="">
+                <p class="facts">Random Fact Generator</p>
+                <button class="marquee-button">
+                    <div class="marquee-container">
+                        <span class="marquee-text">Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts</span>
+                    </div>
+                </button>
+                <div class="factspopping">
+                    <div class="halfsun"></div>
+                </div>
+            </div>
         </div>
     </div>
   </section>
