--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </button>
                 <div class="factspopping">
-                    <div class="halfsun"></div>
+                    <div class="factspop"></div>
                 </div>
             </div>
         </div>
