created fact generator

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="journey__div-img">
                 <img src="images/sophie-illustration.png" alt="">
             </div>
-            <div class="">
+            <div class="journey__facts">
                 <p class="facts">Random Fact Generator</p>
                 <button class="marquee-button">
                     <div class="marquee-container">
