--- a/index.html
+++ b/index.html
@@ -121,12 +121,28 @@
   </section>
 
 
-<!--------------------------------WORK-------------------------------------------------------------->
-  <section class="connect"></section>
+<!--------------------------------CONNECT-------------------------------------------------------------->
+  <footer class="connect">
+    <div class="container-global">
+        <h2 class="connectwithme">Connect with me</h2>
+    </div>
+    <div class="connect__contact">
+        <div class="contact__items">
+            <div class="item__linkedin"></div>
+            <div class="item__mail"></div>
+            <div class="item__github"></div>
+            <div class="item__mail"></div>
+        </div>
+
+    </div>
 
 
-<!--------------------------------FOOTER-------------------------------------------------------------->
-  <footer></footer>
+
+
+  </footer>
+
+
+
 
 
 
