--- a/index.html
+++ b/index.html
@@ -126,14 +126,19 @@
     <div class="container-global">
         <h2 class="connectwithme">Connect with me</h2>
     </div>
-    <div class="connect__contact">
+    <div class="connect__contact flex">
         <div class="contact__items">
-            <div class="item__linkedin"></div>
-            <div class="item__mail"></div>
-            <div class="item__github"></div>
-            <div class="item__mail"></div>
+            <a href=""><div class="item linkedin">LinkedIn</div></a>
         </div>
-
+        <div class="contact__items">
+            <a href=""><div class="item mail">Email</div></a>
+        </div>
+        <div class="contact__items">
+            <a href=""><div class="item github">GitHub</div></a>
+        </div>
+        <div class="contact__items">
+            <a href=""><div class="item v">CV</div></a>
+        </div>
     </div>
 
 
