--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
     <div class="container-global">
         <h2 class="connectwithme">Connect with me</h2>
     </div>
-    <div class="connect__contact flex">
+    <div class="connect__contact ">
         <div class="contact__items">
-            <a href=""><div class="item linkedin">LinkedIn</div></a>
+            <a href="https://www.linkedin.com/in/sophie-nora-keil-39332a325/"><div class="item linkedin">LinkedIn</div></a>
         </div>
         <div class="contact__items">
-            <a href=""><div class="item mail">Email</div></a>
+            <a href="mailto:sophienora92@gmail.com"><div class="item mail">Email</div></a>
         </div>
         <div class="contact__items">
-            <a href=""><div class="item github">GitHub</div></a>
+            <a href="https://github.com/zofienora"><div class="item github">GitHub</div></a>
         </div>
         <div class="contact__items">
-            <a href=""><div class="item v">CV</div></a>
+            <a href="#"><div class="item v">CV</div></a>
         </div>
     </div>
 
