--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
     </div>
   </main>
 <!--------------------------------WORK-------------------------------------------------------------->
+<section class="hoveroverprojects">
+    <div class="container-global">
+        <h2 class="connectwithme">Hover over my projects</h2>
+    </div>
+</section>
+
 <section class="work grid-parent">
     <div class="work grid-item grid_one">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio4.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
@@ -45,6 +52,7 @@
     </div>
     <div class="work grid-item grid_two">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio2.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
@@ -53,6 +61,7 @@
     </div>
     <div class="work grid-item grid_three">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio6.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
@@ -61,6 +70,7 @@
     </div>
     <div class="work grid-item grid_four">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio3.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
@@ -69,6 +79,7 @@
     </div>
     <div class="work grid-item grid_five">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio5.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
@@ -77,6 +88,7 @@
     </div>
     <div class="work grid-item grid_six">
         <div class="grid__text-item">
+            <div class="overlay"></div>
             <img src="images/portfolio1.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
