added connect with me end

--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
             <a href="#"><div class="item v">CV</div></a>
         </div>
     </div>
+    <div class="connect_bye flex">
+        <div class="bye_one">
+            <div class="container-global">
+                <p>&copy; Sophie Nora Keil</p>
+            </div>
+        </div>
+
+        <div class="bye_two">
+            <div class="container-global">
+                <p>Thanks for stopping by!<br> If you're interested in collaborating or have a project in mind, let’s connect!<br> You can follow my journey as a female frontend developer in my 30s and find beginner tips on <a href="https://noracodes.hashnode.dev">my blog</a>. Also, feel free to check out my latest projects on <a href="#">CodePen</a>.<br> Looking forward to creating something great together!
+                </p>
+            </div>
+        </div>
+    </div>
 
 
 
