created codinglab coming soon

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <div class="main__nav flex poppins-light">
             <ul class="main__nav-list flex">
-                <li class="list-items"><a class="list-items-a" href="">BASE</a></li>
-                <li class="list-items"><a class="list-items-a" href="">WORK</a></li>
-                <li class="list-items"><a class="list-items-a" href="">JOURNEY</a></li>
-                <li class="list-items"><a class="list-items-a" href="">codinglab</a></li>
-                <li class="list-items"><a class="list-items-a" href="">CONNECT</a></li>
+                <li class="list-items"><a class="list-items-a" href="#main">BASE</a></li>
+                <li class="list-items"><a class="list-items-a" href="#hoveroverprojects">WORK</a></li>
+                <li class="list-items"><a class="list-items-a" href="#journey">JOURNEY</a></li>
+                <li class="list-items"><a class="list-items-a" href="/codinglab.html">codinglab</a></li>
+                <li class="list-items"><a class="list-items-a" href="#connect">CONNECT</a></li>
             </ul>
         </div>
     </div>
