started media queries

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <!--------------------------------JOURNEY-------------------------------------------------------------->
   <section class="journey poppins-light">
-    <div class="container-global flex">
+    <div class="container-global flex mediaflex">
         <div class="con__journey-p">
             <p>My coding journey began during my Bachelor's when I first encountered Python—and I was hooked. 
                 Since then, I've been focused on creating digital experiences that are both functional 
