--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <main class="main">
+    <div id="randomSquare"></div>
     <div class="container-global flex">
         <div class="main__logo">
             <a href="#main"><p>nora<span class="light">keil</span></p></a>
