hamburger menu try one

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         <div class="main__logo">
             <a href="#main"><p>nora<span class="light">keil</span></p></a>
         </div>
-           
+        <nav>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
         <div class="main__nav flex poppins-light">
             <ul class="main__nav-list flex">
                 <li class="list-items"><a class="list-items-a" href="#main">BASE</a></li>
@@ -31,6 +37,7 @@
             </ul>
         </div>
     </div>
+    <div class="fullscreen-overlay" id="fullscreen-overlay"></div>
     <div class="container-global main__me">
         <h1>Hi, I’m Nora Keil<br> a <span class="poppins-thin">frontend developer</span> with a strong passion for <span class="poppins-thin">design & collaboration.</span></h1>
     </div>
@@ -180,7 +187,6 @@
 
 
 
-    <!-- Verknüpfung der externen JavaScript-Datei -->
     <script src="script.js"></script>
 </body>
 </html>
