changes in fact generator

--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
         <div class="main__logo">
             <a href="#main"><p>nora<span class="light">keil</span></p></a>
         </div>
-        <nav>
-            <div class="ham-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
         <div class="main__nav flex poppins-light">
             <ul class="main__nav-list flex">
                 <li class="list-items"><a class="list-items-a" href="#main">BASE</a></li>
@@ -110,27 +103,25 @@
 
 <!--------------------------------JOURNEY-------------------------------------------------------------->
   <section class="journey poppins-light">
-    <div class="container-global flex mediaflex">
+    <div class="container-global">
         <div class="con__journey-p">
-            <p>My coding journey began during my Bachelor's when I first encountered Python—and I was hooked. 
-                Since then, I've been focused on creating digital experiences that are both functional 
-                and visually engaging.</p>
-            <p>Architecture, film, and photography influence how I approach both coding and design. 
-                When I’m not coding or learning something new, you’ll find me at the gym or taking 
-                city walks to recharge.</p>
-            <p>I’m always excited to collaborate on new projects and create something amazing together.</p> 
-            <p>I also love connecting with other women in tech to empower and support each other along the way!</p>
-            <a href="#connect"><p>Connect with me</p></a>
+            <p>My journey as a coder began in my Bachelor's when I first encountered Python, 
+                and from that moment, I was hooked. The challenge of turning code into something real, 
+                something that people could use, pushed me to dive deeper into frontend development. 
+                I’m passionate about creating user-friendly, functional, and visually engaging experiences 
+                that make an impact. My work is inspired by architecture, film, and photography, and these 
+                influences shape the way I approach both design and coding. As a woman in tech, I’m excited 
+                to be part of a community that’s constantly evolving, and I’m dedicated to growing alongside 
+                other women in the field. When I’m not coding, I’m either pushing my limits at the gym or finding 
+                inspiration in the world around me.</p>
+                <p>I’m always looking for new opportunities to learn and collaborate,
+                eager to build something amazing as I continue to grow in this industry.</p>
         </div>
         <div class="con__journey-img flex">
-            <div class="journey__div-img">
-                <img src="images/sophie-illustration.png" alt="">
-            </div>
             <div class="journey__facts">
-                <p class="facts">Random Fact Generator</p>
                 <button class="marquee-button">
                     <div class="marquee-container">
-                        <span class="marquee-text">Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts Facts</span>
+                        <span class="marquee-text">Random Fact Generator</span>
                     </div>
                 </button>
                 <div class="factspopping">
@@ -147,6 +138,7 @@
     <div class="container-global">
         <h2 class="connectwithme">Connect with me</h2>
     </div>
+
     <div class="connect__contact ">
         <div class="contact__items">
             <a href="https://www.linkedin.com/in/sophie-nora-keil-39332a325/"><div class="item linkedin">LinkedIn</div></a>
@@ -164,7 +156,12 @@
     <div class="connect_bye flex">
         <div class="bye_one">
             <div class="container-global">
-                <p>&copy; Sophie Nora Keil</p>
+                <div class="bye_one-left flex">
+                    <div class="journey__div-img">
+                        <img src="images/sophie-illustration.png" alt="">
+                    </div>
+                    <p>&copy; Sophie Nora Keil</p>
+                </div>
             </div>
         </div>
 
