changes facts and description entirely

--- a/index.html
+++ b/index.html
@@ -105,17 +105,9 @@
   <section class="journey poppins-light">
     <div class="container-global">
         <div class="con__journey-p">
-            <p>My journey as a coder began in my Bachelor's when I first encountered Python, 
-                and from that moment, I was hooked. The challenge of turning code into something real, 
-                something that people could use, pushed me to dive deeper into frontend development. 
-                I’m passionate about creating user-friendly, functional, and visually engaging experiences 
-                that make an impact. My work is inspired by architecture, film, and photography, and these 
-                influences shape the way I approach both design and coding. As a woman in tech, I’m excited 
-                to be part of a community that’s constantly evolving, and I’m dedicated to growing alongside 
-                other women in the field. When I’m not coding, I’m either pushing my limits at the gym or finding 
-                inspiration in the world around me.</p>
-                <p>I’m always looking for new opportunities to learn and collaborate,
-                eager to build something amazing as I continue to grow in this industry.</p>
+            <p>I’m an aspiring frontend developer, currently working on projects in my free time. 
+                When I’m not coding, I’m hitting the gym, getting lost in gaming and anime, or taking 
+                city walks to calm down and get inspired.</p>
         </div>
         <div class="con__journey-img flex">
             <div class="journey__facts">
