cahnges in grid

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!--------------------------------WORK-------------------------------------------------------------->
 <section class="hoveroverprojects">
     <div class="container-global">
-        <h2 class="connectwithme">Hover over my projects</h2>
+        <h2 class="connectwithme">Projects</h2>
     </div>
 </section>
 
@@ -49,7 +49,7 @@
             <img src="images/portfolio4.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">A personal site showcasing frontend development skills and projects.</p>
         </div>
     </div>
     <div class="work grid-item grid_two">
@@ -58,7 +58,7 @@
             <img src="images/portfolio2.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">A minimalist and user-friendly blog platform tailored specifically for architects to share their ideas, projects, and industry news.</p>
         </div>
     </div>
     <div class="work grid-item grid_three">
@@ -67,7 +67,7 @@
             <img src="images/portfolio6.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">A simple, functional website for a tea company without e-commerce features.</p>
         </div>
     </div>
     <div class="work grid-item grid_four">
@@ -76,7 +76,7 @@
             <img src="images/portfolio3.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">A collection of layouts designed to be fully responsive across devices.</p>
         </div>
     </div>
     <div class="work grid-item grid_five">
@@ -85,7 +85,7 @@
             <img src="images/portfolio5.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">HTML cheatsheet that serves as a quick reference guide for common HTML elements and their attributes.</p>
         </div>
     </div>
     <div class="work grid-item grid_six">
@@ -94,7 +94,7 @@
             <img src="images/portfolio1.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">website for a fictive company. responsive layout, animations, product placements</p>
+            <p class="work__text">An updated portfolio website with a more polished design, improved user experience.</p>
         </div>      
     </div>
 </section>
