added section links in html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main class="main">
+  <main class="main" id="base">
     <div id="randomSquare"></div>
     <div class="container-global flex">
         <div class="main__logo">
@@ -22,8 +22,8 @@
         </div>
         <div class="main__nav flex poppins-light">
             <ul class="main__nav-list flex">
-                <li class="list-items"><a class="list-items-a" href="#main">BASE</a></li>
-                <li class="list-items"><a class="list-items-a" href="#hoveroverprojects">WORK</a></li>
+                <li class="list-items"><a class="list-items-a" href="#base">BASE</a></li>
+                <li class="list-items"><a class="list-items-a" href="#work">WORK</a></li>
                 <li class="list-items"><a class="list-items-a" href="#journey">JOURNEY</a></li>
                 <li class="list-items"><a class="list-items-a" href="/codinglab.html">codinglab</a></li>
                 <li class="list-items"><a class="list-items-a" href="#connect">CONNECT</a></li>
@@ -36,7 +36,7 @@
     </div>
   </main>
 <!--------------------------------WORK-------------------------------------------------------------->
-<section class="hoveroverprojects">
+<section class="hoveroverprojects" id="work">
     <div class="container-global">
         <h2 class="connectwithme">Projects</h2>
     </div>
@@ -102,7 +102,7 @@
 
 
 <!--------------------------------JOURNEY-------------------------------------------------------------->
-  <section class="journey poppins-light">
+  <section class="journey poppins-light" id="journey">
     <div class="container-global">
         <div class="con__journey-p">
             <p>I’m an aspiring frontend developer, currently working on projects in my free time. 
@@ -126,9 +126,9 @@
 
 
 <!--------------------------------CONNECT-------------------------------------------------------------->
-  <footer class="connect">
+  <footer class="connect" id="connect">
     <div class="container-global">
-        <h2 class="connectwithme">Connect with me</h2>
+        <h2 class="connectwithme">Connect</h2>
     </div>
 
     <div class="connect__contact ">
@@ -159,7 +159,7 @@
 
         <div class="bye_two">
             <div class="container-global">
-                <p>Thanks for stopping by!<br> If you're interested in collaborating or have a project in mind, let’s connect!<br> You can follow my journey as a female frontend developer in my 30s and find beginner tips on <a href="https://noracodes.hashnode.dev">my blog</a>. Also, feel free to check out my latest projects on <a href="#">CodePen</a>.<br> Looking forward to creating something great together!
+                <p>Thanks for stopping by!<br> If you're interested in collaborating or have a project in mind, let’s connect!<br> You can follow my journey as a female frontend developer in my 30s and find beginner tips on <a href="https://noracodes.hashnode.dev">my blog</a>.<br> Also, feel free to check out my latest projects on <a href="#">CodePen</a>.
                 </p>
             </div>
         </div>
