changes some project texts

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="images/portfolio2.png" alt="" class="work__img">
         </div>
         <div class="grid__text-item grey">
-            <p class="work__text">A minimalist and user-friendly blog platform tailored specifically for architects to share their ideas, projects, and industry news.</p>
+            <p class="work__text">A blog platform tailored specifically for architects to share their ideas, projects, and industry news.</p>
         </div>
     </div>
     <div class="work grid-item grid_three">
