created the close button and the nav sidebar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div class="main__nav flex poppins-light">
             <ul class="main__nav-list flex">
+                <button class="openButton" id="openSidebar">X</button>
                 <li class="list-items"><a class="list-items-a" href="#base">BASE</a></li>
                 <li class="list-items"><a class="list-items-a" href="#work">WORK</a></li>
                 <li class="list-items"><a class="list-items-a" href="#journey">JOURNEY</a></li>
