working on navbar, openSidebar Button and function

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <div class="main__logo">
             <a href="#main"><p>nora<span class="light">keil</span></p></a>
         </div>
-        <div class="main__nav flex poppins-light">
+        <div ><button class="openButton" id="openSidebar" onclick="openSidebar()"><img src="images/menu.png" alt="open navigation sidebar"></button></div>
+        <div class="main__nav flex poppins-light" id="navbar">
             <ul class="main__nav-list flex">
-                <button class="openButton" id="openSidebar">X</button>
+                <button class="closeButton" id="closeSidebar" onclick="closeSidebar()">X</button>
                 <li class="list-items"><a class="list-items-a" href="#base">BASE</a></li>
                 <li class="list-items"><a class="list-items-a" href="#work">WORK</a></li>
                 <li class="list-items"><a class="list-items-a" href="#journey">JOURNEY</a></li>
